# faceFusionCpp

./: .clang-format  CMakeLists.txt  CMakeSettings.json  DISCLAIMER.txt  DOCUMENT.md  Document.md  LICENSE  README.md  README_CN.md  faceFusionCpp.ini  facefusion.ini  main.cpp  modelsInfo.json
cmake/: onnxruntime-gpu.cmake
facefusionCpp/: CMakeLists.txt  main.cpp  modelsInfo.json
facefusionCpp/src/: CMakeLists.txt  config.cpp  config.h  core.cpp  core.h  face_helper.h  face_store.cpp  ffmpeg_runner.cpp  ffmpeg_runner.h  file_system.cpp  file_system.h  logger.cpp  logger.h  metadata.h  ort_session.cpp  ort_session.h  progress_bar.cpp  progress_bar.h  vision.cpp
facefusionCpp/src/face_analyser/: face_analyser.cpp  face_detector_gender_age.h  face_detector_scrfd.cpp  face_detector_scrfd.h  face_detector_yolo.cpp  face_landmarker_68.h  face_landmarker_68_5.cpp  face_recognizer_arc.cpp  face_recognizer_arc.h
facefusionCpp/src/processors/frame/modules/: CMakeLists.txt  face_enhancer.cpp  face_enhancer.h  face_swapper.cpp  face_swapper.h  processor_base.h
src/: CMakeLists.txt  codeKeeper.cpp  config.cpp  config.h  core.cpp  core.h  downloader.cpp  downloader.h  face_helper.cpp  face_helper.h  face_masker.cpp  face_masker.h  face_store.cpp  face_store.h  file_system.cpp  file_system.h  globals.h  image_helper.cpp  image_helper.h  ort_session.cpp  ort_session.h  progress_bar.h  typing.h  url_downloader.cpp  url_downloader.h  utils.cpp  utils.h  vision.cpp  vision.h
src/face_analyser/: CMakeLists.txt  analyser_base.cpp  analyser_base.h  face_analyser.cpp  face_analyser.h  face_analyser_session.cpp  face_analyser_session.h  face_detector_gender_age.cpp  face_detector_gender_age.h  face_detector_retina.cpp  face_detector_retina.h  face_detector_scrfd.cpp  face_detector_scrfd.h  face_detector_yolo.cpp  face_detector_yolo.h  face_detector_yunet.cpp  face_detector_yunet.h  face_landmarker_68.cpp  face_landmarker_68.h  face_landmarker_68_5.cpp  face_landmarker_68_5.h  face_recognizer_arc.cpp  face_recognizer_arc.h
src/processors/: CMakeLists.txt
src/processors/frame/modules/: CMakeLists.txt  face_enhancer.cpp  face_enhancer.h  face_swapper.cpp  face_swapper.h  processor_base.cpp  processor_base.h
src/processors/frame/modules/face_swapper/: CMakeLists.txt  face_swapper.cpp  face_swapper.h  face_swapper_base.cpp  face_swapper_base.h  face_swapper_session.cpp  face_swapper_session.h  inswapper.cpp  inswapper.h
